# waims-gm

./: .env.example  .env.live.example  .env.sandbox.example  .gitignore  CLAUDE.md  CLAUDE.sandbox.md  DEMO_SCRIPT.md  POSITIONING.md  PRIVACY.md  README.md  REPO_OPERATING_MODEL.md  Waims gm startup plan.md  pyproject.toml  readme_mvp.md  render.yaml  streamlit_app.py  waims_gm_recruiting.py
app/: auth.py  config.py  main.py  models.py
app/routes/: evaluate.py  health.py
app/services/: supabase.py
assets/: README.md
docs/: ARCHITECTURE.md
examples/: waims_gm_import_sample.csv
scripts/: .env  demo_bootstrap.ps1  get_token.py  keep_supabase_alive.ps1  preflight.py  seed_demo_data.py
supabase/: waims_gm_schema.sql
tests/: test_api.py  test_config.py  test_csv_import.py  test_recruiting.py  test_reporting.py  test_scoring.py
waims_gm/: __init__.py  demo_data.py  domain.py
waims_gm/rulesets/: __init__.py  v1_simulator.py
waims_gm/services/: __init__.py  evaluator.py
