[project]
name = "waims-gm"
version = "0.1.0"
description = "Basketball decision-support prototype with Streamlit, FastAPI, and Supabase."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3.0",
  "streamlit>=1.32",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "waims_gm*"]
exclude = ["ui*", "api*", "routes*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
